Changed the file name from login to index

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="col-lg-5 py-4">
 
 
-                     <form name="myForm" method="post">
+                     <form name="myForm" class="col-lg-5" method="post">
                          <input class="innn" type="text" name="userIdText" class="inputText" placeholder="Enter Your User ID" oninput="UserText()">
                          <br><br>
                          <input class="innn" type="number" name="acctInput" class="inputText"
