--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="/cssfile/style.css">
-    <link rel="stylesheet" href="/cssfile/dashboard.css">
+    <link rel="stylesheet" href="cssfile/style.css">
+    <link rel="stylesheet" href="cssfile/dashboard.css">
 </head>
 
 <body>
@@ -162,7 +162,7 @@
                     </h3>
                     <h4 class="accountText w3-animate-zoom">Account Number: <span id="userAccount"></span>
                     </h4>
-                    <h4 class="balanceText w3-animate-zoom">Balance: <span id="userBalance">₦145,568,050</span></h4>
+                    <h4 class="balanceText w3-animate-zoom">Balance: <span id="userBalance">₦145,568,050.20</span></h4>
                     <h4 class="userAcct"></h4>
 
                     <p class="texb py-3 w3-animate-left">A secure way to access your accounts, manage payments, check
