Added Footer Section

--- a/dashboard.html
+++ b/dashboard.html
@@ -241,7 +241,27 @@
             </div>
 
         </div>
+        <div class="container">
+                                <div class="mb-2">
+
+
+                                    <button class="logoutButton"> <a class="log text-decoration-none" href="/index.html">Logout</a> </button>
+                                </div>
+
+        </div>
     </section>
+        <footer class="">
+
+            <div class="container-fluid foot py-2 mt-4 text-center">
+                <div class="row">
+                    <h5 class="footerText">
+
+                        Developed by: <a class="footerLink"
+                            href="https://www.linkedin.com/in/pius-ashogbon-05aa3a214/">Pius Ashogbon</a>
+                    </h5>
+                </div>
+            </div>
+        </footer>
 
   <script>
       let valAcct = window.localStorage.getItem('myAccountVal');
