--- a/index.html
+++ b/index.html
@@ -176,25 +176,37 @@
                 <div class="col-lg-5 py-4">
 
 
-                     <form name="myForm" class="col-lg-5" method="post">
-                         <input class="innn" type="text" name="userIdText" class="inputText" placeholder="Enter Your User ID" oninput="UserText()">
-                         <br><br>
-                         <input class="innn" type="number" name="acctInput" class="inputText"
-                             placeholder="Enter Your Account Number" oninput="myText()">
-                         <br><br>
-                         <input class="sub" type="button" name="log" id="logButton" value="Submit Account"
-                             onclick="accountDetails()">
-                     </form>
+                    <form name="myForm" class="col-lg-5" method="post">
+                        <input class="innn" type="text" name="userIdText" class="inputText"
+                            placeholder="Enter Your User ID" oninput="UserText()">
+                        <br><br>
+                        <input class="innn" type="number" name="acctInput" class="inputText"
+                            placeholder="Enter Your Account Number" oninput="myText()">
+                        <br><br>
+                        <input class="sub" type="button" name="log" id="logButton" value="Submit Account"
+                            onclick="accountDetails()">
+                    </form>
 
                 </div>
             </div>
 
         </div>
     </section>
+    <footer class="">
+        
+        <div class="container-fluid foot py-3 text-center">
+            <div class="row">
+                <h5 class="footerText">
+
+            Developed by: <a class="footerLink" href="https://www.linkedin.com/in/pius-ashogbon-05aa3a214/">Pius Ashogbon</a>
+                </h5>
+            </div>
+        </div>
+    </footer>
 
 
 
-<script src="/jsfiles/app.js"></script>
+    <script src="/jsfiles/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
