--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
 
 
                     <form name="myForm" class="col-lg-5" method="post">
-                        <input class="innn" type="text" name="userIdText" class="inputText"
-                            placeholder="Enter Your User ID" oninput="UserText()">
+                        <input class="innn" type="text" name="userIdText" placeholder="Enter Your User ID"
+                            oninput="UserText()">
                         <br><br>
-                        <input class="innn" type="number" name="acctInput" class="inputText"
-                            placeholder="Enter Your Account Number" oninput="myText()">
+                        <input class="innn" type="number" name="acctInput" placeholder="Enter Your Account Number"
+                            oninput="myText()">
                         <br><br>
                         <input class="sub" type="button" name="log" id="logButton" value="Submit Account"
                             onclick="accountDetails()">
@@ -193,12 +193,13 @@
         </div>
     </section>
     <footer class="">
-        
+
         <div class="container-fluid foot py-3 text-center">
             <div class="row">
                 <h5 class="footerText">
 
-            Developed by: <a class="footerLink" href="https://www.linkedin.com/in/pius-ashogbon-05aa3a214/">Pius Ashogbon</a>
+                    Developed by: <a class="footerLink" href="https://www.linkedin.com/in/pius-ashogbon-05aa3a214/">Pius
+                        Ashogbon</a>
                 </h5>
             </div>
         </div>
