Deleted the js folder

--- a/dashboard.html
+++ b/dashboard.html
@@ -106,11 +106,12 @@
                         </div>
                     </div>
                     <!-- Container wrapper -->
+
                 </nav>
             </div>
 
             <div class="otherNav col-lg-6">
-
+                    
             </div>
         </div>
     </section>
@@ -144,8 +145,13 @@
                     <li class="nav-item">
                         <a class="nav-link px-3">Open Account</a>
                     </li>
+                    <li class="nav-item px-5">
+                                    <button class="logoutButton"> <a class="log text-decoration-none"
+                                            href="/index.html">Logout</a> </button>
+                    </li>
                 </ul>
                 <!-- Left links -->
+
             </div>
             <!-- Collapsible wrapper -->
         </div>
@@ -241,14 +247,7 @@
             </div>
 
         </div>
-        <div class="container">
-                                <div class="mb-2">
 
-
-                                    <button class="logoutButton"> <a class="log text-decoration-none" href="/index.html">Logout</a> </button>
-                                </div>
-
-        </div>
     </section>
         <footer class="">
 
