--- a/index.html
+++ b/index.html
@@ -173,26 +173,31 @@
 
                 </div>
 
-                <div class="col-lg-5 py-4">
+                <div class="col-lg-5 py-5">
 
 
                     <form name="myForm" class="col-lg-5" method="post">
                         <input class="innn" type="text" name="userIdText" placeholder="Enter Your User ID"
-                            oninput="UserText()">
-                        <br><br>
+                            oninput="UserText()" required>
+                        <div class="userError">
+                            <p class="px-3"></p>
+                        </div>
                         <input class="innn" type="number" name="acctInput" placeholder="Enter Your Account Number"
                             oninput="myText()">
-                        <br><br>
+                        <div class="accountError">
+                            <p class="px-3"></p>
+                        </div>
+
                         <input class="sub" type="button" name="log" id="logButton" value="Submit Account"
                             onclick="accountDetails()">
                     </form>
 
                 </div>
             </div>
-
+            <h5 class="py-3 banK">Thank You For Choosing us..</h5>
         </div>
     </section>
-    <footer class="">
+    <footer class="py-5">
 
         <div class="container-fluid foot py-3 text-center">
             <div class="row">
@@ -207,7 +212,7 @@
 
 
 
-    <script src="/jsfiles/app.js"></script>
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
