Adjusted the logout button

--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@
                     </li>
                     <li class="nav-item px-5">
                                     <button class="logoutButton"> <a class="log text-decoration-none"
-                                            href="/index.html">Logout</a> </button>
+                                            href="index.html">Logout</a> </button>
                     </li>
                 </ul>
                 <!-- Left links -->
