Validating the Success messages

--- a/index.html
+++ b/index.html
@@ -182,9 +182,15 @@
                         <div class="userError">
                             <p class="px-3"></p>
                         </div>
+                        <div class="userSuccess">
+                            <p class="px-3"></p>
+                        </div>
                         <input class="innn" type="number" name="acctInput" placeholder="Enter Your Account Number"
                             oninput="myText()">
                         <div class="accountError">
+                            <p class="px-3"></p>
+                        </div>
+                        <div class="accountSuccess">
                             <p class="px-3"></p>
                         </div>
 
