--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     Important Notice:
                 </h4>
                 <p class="topPar w3-animate-right">
-                    Please be mindful of fake sites run by fraudulent parties posing as Guaranty Trust Bank Ltd or its
+                    Please be mindful of fake sites run by fraudulent parties posing as AshBank Ltd or its
                     affiliates. Do not disclose your personal information and financial details to anyone online or
                     anywhere else.
                 </p>
